fix blog z-index change

--- a/css/main.css
+++ b/css/main.css
@@ -1083,7 +1083,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative;
-  z-index: 15;
+  z-index: 10;
 }
 
 .blog-post {
