--- a/sass/components/_blog.scss
+++ b/sass/components/_blog.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  z-index: 15;
+  z-index: 10;
 }
 
 .blog-post {
